# zyn

./: .gitignore  BENCH.md  CMP.md  Cargo.toml  DESIGN.md  LANG.md  LICENSE  POST.md  README.md  ROADMAP.md  release.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  bench_batch.yml  bench_pull_request.yml  bench_pull_request_track.yml  book.yml  ci.yml
backlog/: 01-attribute-trait.md  01-rename-element-to-template.md  02-attribute-extraction.md  02-derive-structs.md  02-extract-shared-utilities.md  03-add-zyn-derive.md  03-derive-enums.md  03-error-accumulation.md  04-add-zyn-attribute.md  04-element-integration.md  04-rename-all-and-map.md  05-error-accumulation.md  05-generic-tracking.md  05-rewrite-trace-var.md  1-ast.md  2-parser.md  3-expander.md  4-pipes.md  5-entry.md  6-element-macro.md  7-pipe-macro.md  README.md
benches/: attr.rs  case.rs  expand.rs
book/: book.toml
book/src/: 00-introduction.md  01-getting-started.md  02-interpolation.md  03-pipes.md  04-control-flow.md  05-elements.md  06-custom-pipes.md  07-case-conversion.md  07-testing.md  SUMMARY.md
book/src/02-templates/: README.md
book/src/03-elements/: README.md  diagnostics.md
book/src/04-attributes/: README.md
book/src/04-control-flow/: errors-and-warnings.md
book/src/05-elements/: children.md  custom-names.md  defining.md  diagnostics.md  namespaced.md  zero-parameters.md
book/src/05-reference/: debugging.md  errors.md  grammar.md  migration.md  traits.md
book/src/06-macros/: README.md  attribute.md  derive.md
book/src/08-attributes/: README.md  arg-args.md  derive-attribute.md  ext.md  extractors.md  from-input.md
book/src/08-attributes/extractors/: README.md  attr-extract.md  data.md  element-inputs.md  fields.md  input-attribute.md  variants.md
book/src/08-ext/: README.md  arg.md  args.md
book/src/09-reference/: README.md  debugging.md  errors.md  expansion.md  grammar.md  migration.md  traits.md
book/theme/: index.hbs  zyn.highlight.js
crates/core/: BACKLOG.md  Cargo.toml
crates/core/src/: case.rs  debug.rs  diagnostic.rs  ext.rs  extract.rs  ident.rs  lib.rs  pipes.rs  template.rs
crates/core/src/ast/: group_node.rs  interp_node.rs  mod.rs  pipe_node.rs  tokens_node.rs
crates/core/src/ast/at/: diag_child_node.rs  element_node.rs  for_node.rs  help_node.rs  if_node.rs  match_node.rs  mod.rs  note_node.rs  throw_node.rs  warn_node.rs
crates/core/src/debug/: mod.rs  pretty.rs
crates/core/src/ext/: attr.rs  data.rs  field.rs  fields.rs  item.rs  meta.rs  mod.rs  ty.rs  variant.rs
crates/core/src/extract/: attr.rs  data.rs  fields.rs  mod.rs  variants.rs
crates/core/src/input/: mod.rs
crates/core/src/input/derive/: derive_enum.rs  derive_struct.rs  derive_union.rs  mod.rs
crates/core/src/input/item/: impl_item_fn.rs  item_const.rs  item_enum.rs  item_extern_crate.rs  item_fn.rs  item_foreign_mod.rs  item_impl.rs  item_mod.rs  item_static.rs  item_struct.rs  item_trait.rs  item_type.rs  item_union.rs  item_use.rs  mod.rs  trait_item_fn.rs
crates/core/src/mark/: diagnostic.rs  level.rs  mod.rs  scope.rs  span.rs
crates/core/src/meta/: arg.rs  args.rs  mod.rs
crates/core/src/path/: error.rs  mod.rs  segment.rs
crates/core/src/types/: derive.rs  item.rs  mod.rs
crates/core/tests/: case_conversion.rs  expand.rs  pipes.rs
crates/derive/: Cargo.toml
crates/derive/src/: ast.rs  element.rs  lib.rs  pipe.rs  prettify.rs
crates/derive/src/attribute/: emit.rs  mod.rs
crates/derive/src/attribute/enums/: mod.rs  variant_meta.rs
crates/derive/src/attribute/structs/: field_meta.rs  mod.rs  struct_meta.rs
crates/derive/src/common/: attrs.rs  diagnostics.rs  extractors.rs  mod.rs
crates/derive/src/common/debug/: config.rs  emit.rs  mod.rs  pattern.rs
crates/derive/src/macros/: attribute.rs  derive.rs  element.rs  mod.rs  pipe.rs
crates/ext/: Cargo.toml
crates/ext/src/: arg.rs  args.rs  attr.rs  lib.rs
crates/zyn-core/: Cargo.toml  README.md
crates/zyn-core/src/: lib.rs  template.rs
crates/zyn-core/src/ast/at/: element_node.rs
crates/zyn-core/src/mark/: diagnostic.rs  mod.rs
crates/zyn-core/src/types/: item.rs  mod.rs  output.rs
crates/zyn-derive/: Cargo.toml  README.md
crates/zyn-derive/src/common/: diagnostics.rs  extractors.rs
crates/zyn-derive/src/macros/: attribute.rs  derive.rs  element.rs
editors/vscode/: README.md  package.json  zyn-0.0.1.vsix  zyn-0.2.0.vsix
editors/vscode/syntaxes/: zyn.injection.json
examples/builder/: Cargo.toml  README.md
examples/trace-var/: Cargo.toml
examples/trace-var/src/: folder.rs  lib.rs
examples/trace-var/tests/: trace_var.rs
src/: ident.rs  lib.rs
src/ast/: element_node.rs  for_node.rs  group_node.rs  if_node.rs  interp_node.rs  match_node.rs  mod.rs  pipe_node.rs  throw_node.rs  tokens_node.rs
src/ast/at/: element_node.rs  for_node.rs  if_node.rs  match_node.rs  mod.rs  throw_node.rs
src/test/: assert_diagnostic.rs  assert_tokens.rs  assert_tokens_contain.rs  assert_tokens_empty.rs  mod.rs
tests/: element.rs  pipe.rs  throw.rs  zyn.rs
tests/attribute/: enums.rs  structs.rs
tests/compile-fail/: throw.rs  throw.stderr
tests/debug/: element.rs  mod.rs  pipe.rs
tests/diagnostic/: help.rs  levels.rs  mod.rs  note.rs  syntax_errors.rs  throw.rs  warn.rs
tests/diagnostics/: accumulation.rs  construction.rs  convert.rs  display.rs  emit.rs  iterator.rs  levels.rs  macros.rs  syntax.rs
tests/diagnostics/disabled/: emit.rs  macros.rs
tests/diagnostics/enabled/: emit.rs  macros.rs
tests/element/: extract.rs  mod.rs  namespaced.rs
tests/ext/: attr.rs  data.rs  fields.rs
tests/pipe/: builtin.rs  camel.rs  custom.rs  fmt_pipe.rs  ident_pipe.rs  kebab.rs  mod.rs  pascal.rs  plural.rs  screaming.rs  singular.rs  snake.rs  str_pipe.rs  trim.rs
tests/zyn/: combined.rs  control_flow.rs  expand.rs  groups.rs  interpolation.rs  interpolation_advanced.rs  mod.rs  passthrough.rs
