[workspace]
resolver = "3"
members = [".", "crates/*"]
default-members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/zyn"
homepage = "https://www.github.com/aacebo/zyn"
repository = "https://www.github.com/aacebo/zyn"
keywords = ["macro", "framework", "proc", "rust"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }

zyn-core = { path = "./crates/core", version = "0.1.0" }
zyn-ext = { path = "./crates/ext", version = "0.1.0" }
zyn-derive = { path = "./crates/derive", version = "0.1.0" }

# ----------- Package ----------- #

[package]
name = "zyn"
description = "A procedural macro development framework designed to simplify and add structure to rust macro development"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false

[features]
default = ["derive"]
derive = ["zyn-derive"]
ext = ["zyn-ext"]

[dependencies]
zyn-core = { workspace = true }
zyn-ext = { workspace = true, optional = true }
zyn-derive = { workspace = true, optional = true }

[dev-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
