[workspace]
resolver = "3"
members = [".", "crates/*", "examples/*"]
default-members = [".", "crates/*", "examples/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/zyn"
homepage = "https://www.github.com/aacebo/zyn"
repository = "https://www.github.com/aacebo/zyn"
keywords = ["macro", "framework", "proc", "rust"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]

[workspace.dependencies]
zyn-core = { path = "./crates/core", version = "0.2.0" }
zyn-derive = { path = "./crates/derive", version = "0.2.0" }

# ----------- Package ----------- #

[package]
name = "zyn"
description = "A procedural macro development framework designed to simplify and add structure to rust macro development"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false

[features]
default = ["derive"]
derive = ["zyn-derive"]
ext = ["zyn-core/ext"]

[dependencies]
zyn-core = { workspace = true }
zyn-derive = { workspace = true, optional = true }

[dev-dependencies]
zyn-core = { workspace = true }

[[test]]
name = "zyn"
path = "tests/zyn/mod.rs"

[[test]]
name = "element"
path = "tests/element/mod.rs"

[[test]]
name = "pipe"
path = "tests/pipe/mod.rs"

[[test]]
name = "attribute"
path = "tests/attribute/mod.rs"

[[test]]
name = "diagnostics"
path = "tests/diagnostics/mod.rs"
