[workspace]
resolver = "3"
members = [".", "crates/*", "examples/*"]
default-members = [".", "crates/*"]

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://aacebo.github.io/zyn"
homepage = "https://aacebo.github.io/zyn"
repository = "https://www.github.com/aacebo/zyn"
keywords = ["macro", "framework", "proc", "rust"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]

[workspace.dependencies]
zyn-core = { path = "./crates/zyn-core", version = "=0.5.1" }
zyn-derive = { path = "./crates/zyn-derive", version = "=0.5.1" }

# ----------- Package ----------- #

[package]
name = "zyn"
description = "A proc macro framework with templates, composable elements, and built-in diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["assets", "book", "examples"]

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
default = ["derive"]
derive = ["zyn-derive"]
ext = ["zyn-core/ext"]
pretty = ["zyn-core/pretty", "zyn-derive/pretty"]
diagnostics = ["zyn-core/diagnostics", "zyn-derive/diagnostics"]

[dependencies]
zyn-core = { workspace = true }
zyn-derive = { workspace = true, optional = true }

[dev-dependencies]
zyn-core = { workspace = true }
darling = "0.23"
heck = "0.5"

[[bench]]
name = "expand"

[[bench]]
name = "attr"

[[bench]]
name = "case"

[[test]]
name = "zyn"
path = "tests/zyn/mod.rs"

[[test]]
name = "element"
path = "tests/element/mod.rs"

[[test]]
name = "pipe"
path = "tests/pipe/mod.rs"

[[test]]
name = "attribute"
path = "tests/attribute/mod.rs"

[[test]]
name = "debug"
path = "tests/debug/mod.rs"

[[test]]
name = "diagnostics"
path = "tests/diagnostics/mod.rs"

[[test]]
name = "ext"
path = "tests/ext/mod.rs"
required-features = ["ext"]
