[package]
name = "zyn-core"
description = "core ast and other type/helper implementations for zyn"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
ext = []

[dependencies]
proc-macro2 = "1"
proc-macro2-diagnostics = "0.10"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "fold"] }

