[package]
name = "zyn-core"
description = "Core AST, traits, and utilities for the zyn proc macro framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
ext = []
pretty = ["prettyplease"]
diagnostics = ["proc-macro2-diagnostics"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "fold"] }
prettyplease = { version = "0.2", optional = true }
proc-macro2-diagnostics = { version = "0.10", optional = true }

