[package]
name = "zyn-derive"
description = "Proc macros for the zyn framework"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false
proc-macro = true

[features]
pretty = ["zyn-core/pretty"]
diagnostics = ["zyn-core/diagnostics"]

[dependencies]
zyn-core = { workspace = true }
